# idx

./: .gitignore  Justfile  Makefile  README.md  Rakefile  Vagrantfile  build.zig  idle.json  wapm.toml  zig.mod
.ccls-cache/@@Users@clp@id@idl/: @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@Availability.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@AvailabilityInternal.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@AvailabilityVersions.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@__wctype.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@_ctermid.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@_ctype.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@_locale.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@_stdio.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@_types.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@_types@_intmax_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@_types@_nl_item.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@_types@_uint16_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@_types@_uint32_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.1.sdk@usr@include@_types@_uint64_t.h.blob  (+263 more)
lib/idot/res/: Cargo.toml  idfo.if
src/: data.zig  idl.sublime-workspace  keys.zig  main.zig
(+88 files in other folders)
